feat: add Neovim configuration and update zsh key bindings

--- a/sheldon/plugins.toml
+++ b/sheldon/plugins.toml
@@ -46,3 +46,7 @@ apply = ["defer"]
 [plugins.zsh-syntax-highlighting]
 github = "zsh-users/zsh-syntax-highlighting"
 apply = ["defer"]
+
+[plugins.zsh-vi-mode]
+github = "jeffreytse/zsh-vi-mode"
+apply = ["defer"]
